--- a/SuperTicTacToe/Views/Cells/MatchMoveCollectionViewCell.xib
+++ b/SuperTicTacToe/Views/Cells/MatchMoveCollectionViewCell.xib
@@ -11,11 +11,26 @@
             <autoresizingMask key="autoresizingMask"/>
             <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
                 <rect key="frame" x="0.0" y="0.0" width="100" height="100"/>
+                <subviews>
+                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="2Nh-Z2-Nlf">
+                        <rect key="frame" x="5" y="5" width="90" height="90"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    </view>
+                </subviews>
                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                 <nil key="simulatedStatusBarMetrics"/>
                 <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
             </view>
+            <constraints>
+                <constraint firstAttribute="bottom" secondItem="2Nh-Z2-Nlf" secondAttribute="bottom" constant="5" id="75e-if-ic1"/>
+                <constraint firstAttribute="trailing" secondItem="2Nh-Z2-Nlf" secondAttribute="trailing" constant="5" id="Hm8-aJ-Gwz"/>
+                <constraint firstItem="2Nh-Z2-Nlf" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" constant="5" id="KE8-kA-aNt"/>
+                <constraint firstItem="2Nh-Z2-Nlf" firstAttribute="top" secondItem="gTV-IL-0wX" secondAttribute="top" constant="5" id="roz-uZ-SBO"/>
+            </constraints>
             <size key="customSize" width="100" height="50"/>
+            <connections>
+                <outlet property="pieceView" destination="2Nh-Z2-Nlf" id="gbG-vv-bWe"/>
+            </connections>
             <point key="canvasLocation" x="232" y="303"/>
         </collectionViewCell>
     </objects>
